@@ -9,6 +9,8 @@ import java.util.Locale;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -26,6 +28,12 @@ import stirling.software.SPDF.model.api.converters.SvgToPdfRequest;
 import stirling.software.SPDF.utils.SvgToPdf;
 import stirling.software.common.annotations.AutoJobPostMapping;
 import stirling.software.common.annotations.api.ConvertApi;
+import stirling.software.common.enumeration.ResourceWeight;
+import stirling.software.common.model.tool.ToolArity;
+import stirling.software.common.model.tool.ToolFormat;
+import stirling.software.common.model.tool.ToolIO;
+import stirling.software.common.model.tool.ToolIOCase;
+import stirling.software.common.model.tool.ToolIOWhen;
 import stirling.software.common.service.CustomPDFDocumentFactory;
 import stirling.software.common.util.GeneralUtils;
 import stirling.software.common.util.SvgSanitizer;
@@ -42,18 +50,29 @@ public class ConvertSvgToPDF {
     private final SvgSanitizer svgSanitizer;
     private final TempFileManager tempFileManager;
 
-    @AutoJobPostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE, value = "/svg/pdf")
+    @AutoJobPostMapping(
+            consumes = MediaType.MULTIPART_FORM_DATA_VALUE,
+            value = "/svg/pdf",
+            resourceWeight = ResourceWeight.MEDIUM_WEIGHT)
     @MultiFileResponse
+    @ToolIO(
+            accepts = ToolFormat.IMAGE,
+            produces = ToolFormat.PDF,
+            arity = ToolArity.MIMO,
+            cases =
+                    @ToolIOCase(
+                            when = @ToolIOWhen(param = "combineIntoSinglePdf", matches = "true"),
+                            produces = ToolFormat.PDF,
+                            arity = ToolArity.MISO))
     @Operation(
             summary = "Convert SVG to PDF",
             description =
-                    "This endpoint converts one or more SVG (Scalable Vector Graphics) files to PDF format. "
-                            + "Each SVG is converted to a separate PDF file. "
-                            + "The conversion preserves vector graphics for crisp output at any resolution - no rasterization occurs. "
-                            + "SVG dimensions (width/height) determine the PDF page size; defaults to A4 if not specified. "
-                            + "SVG content is sanitized to prevent XSS attacks. "
-                            + "Input: SVG file(s), Output: PDF file(s) or ZIP. Type: MIMO")
-    public ResponseEntity<byte[]> convertSvgToPdf(@ModelAttribute SvgToPdfRequest request) {
+                    "This endpoint converts one or more SVG (Scalable Vector Graphics) files to PDF"
+                            + " format. Each SVG is converted to a separate PDF file. The conversion preserves"
+                            + " vector graphics for crisp output at any resolution - no rasterization occurs."
+                            + " SVG dimensions (width/height) determine the PDF page size; defaults to A4 if"
+                            + " not specified. SVG content is sanitized to prevent XSS attacks.")
+    public ResponseEntity<Resource> convertSvgToPdf(@ModelAttribute SvgToPdfRequest request) {
 
         MultipartFile[] inputFiles = request.getFileInput();
         boolean combineIntoSinglePdf = Boolean.TRUE.equals(request.getCombineIntoSinglePdf());
@@ -61,8 +80,7 @@ public class ConvertSvgToPDF {
         // Validate input
         if (inputFiles == null || inputFiles.length == 0) {
             log.error("No files provided for SVG to PDF conversion.");
-            return ResponseEntity.badRequest()
-                    .body("No files provided".getBytes(StandardCharsets.UTF_8));
+            return errorResponse(HttpStatus.BAD_REQUEST, "No files provided");
         }
 
         try {
@@ -94,17 +112,13 @@ public class ConvertSvgToPDF {
                     filenames.add(Filenames.toSimpleFileName(originalFilename));
 
                 } catch (IOException e) {
-                    log.error(
-                            "SVG sanitization/reading failed for {}: {}",
-                            originalFilename,
-                            e.getMessage());
+                    log.error("SVG sanitization/reading failed for {}", originalFilename, e);
                 }
             }
 
             if (sanitizedSvgs.isEmpty()) {
                 log.error("No valid SVG files were found");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                        .body("No valid SVG files were found".getBytes(StandardCharsets.UTF_8));
+                return errorResponse(HttpStatus.BAD_REQUEST, "No valid SVG files were found");
             }
 
             if (combineIntoSinglePdf) {
@@ -115,14 +129,20 @@ public class ConvertSvgToPDF {
 
         } catch (Exception e) {
             log.error("Unexpected error during SVG to PDF conversion", e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(
-                            "An unexpected error occurred during conversion"
-                                    .getBytes(StandardCharsets.UTF_8));
+            return errorResponse(
+                    HttpStatus.INTERNAL_SERVER_ERROR,
+                    "An unexpected error occurred during conversion");
         }
     }
 
-    private ResponseEntity<byte[]> handleCombinedConversion(
+    private ResponseEntity<Resource> errorResponse(HttpStatus status, String message) {
+        byte[] body = message.getBytes(StandardCharsets.UTF_8);
+        return ResponseEntity.status(status)
+                .contentLength(body.length)
+                .body(new ByteArrayResource(body));
+    }
+
+    private ResponseEntity<Resource> handleCombinedConversion(
             List<byte[]> sanitizedSvgs, List<String> filenames) {
         try {
             log.info("Combining {} SVG files into single PDF", sanitizedSvgs.size());
@@ -131,10 +151,8 @@ public class ConvertSvgToPDF {
 
             if (pdfBytes == null || pdfBytes.length == 0) {
                 log.error("PDF conversion failed - empty output");
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body(
-                                "PDF conversion failed - empty output"
-                                        .getBytes(StandardCharsets.UTF_8));
+                return errorResponse(
+                        HttpStatus.INTERNAL_SERVER_ERROR, "PDF conversion failed - empty output");
             }
 
             pdfBytes = pdfDocumentFactory.createNewBytesBasedOnOldDocument(pdfBytes);
@@ -142,23 +160,27 @@ public class ConvertSvgToPDF {
             String outputFilename =
                     filenames.isEmpty()
                             ? "combined_svgs.pdf"
-                            : GeneralUtils.generateFilename(filenames.get(0), "_combined.pdf");
+                            : GeneralUtils.generateFilename(filenames.getFirst(), "_combined.pdf");
 
             log.info("Successfully combined {} SVGs into single PDF", sanitizedSvgs.size());
 
-            return WebResponseUtils.bytesToWebResponse(
-                    pdfBytes, outputFilename, MediaType.APPLICATION_PDF);
+            TempFile tempOut = tempFileManager.createManagedTempFile(".pdf");
+            try {
+                Files.write(tempOut.getPath(), pdfBytes);
+            } catch (Exception e) {
+                tempOut.close();
+                throw e;
+            }
+            return WebResponseUtils.pdfFileToWebResponse(tempOut, outputFilename);
 
         } catch (IOException e) {
             log.error("Error combining SVGs into PDF", e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(
-                            ("Conversion failed: " + e.getMessage())
-                                    .getBytes(StandardCharsets.UTF_8));
+            return errorResponse(
+                    HttpStatus.INTERNAL_SERVER_ERROR, "Conversion failed: " + e.getMessage());
         }
     }
 
-    private ResponseEntity<byte[]> handleSeparateConversion(
+    private ResponseEntity<Resource> handleSeparateConversion(
             List<byte[]> sanitizedSvgs, List<String> filenames) {
         List<ConvertedPdf> convertedPdfs = new ArrayList<>();
 
@@ -188,38 +210,40 @@ public class ConvertSvgToPDF {
 
         if (convertedPdfs.isEmpty()) {
             log.error("No files were successfully converted");
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("No files were successfully converted".getBytes(StandardCharsets.UTF_8));
+            return errorResponse(
+                    HttpStatus.INTERNAL_SERVER_ERROR, "No files were successfully converted");
         }
 
         try {
             if (convertedPdfs.size() == 1) {
-                ConvertedPdf pdf = convertedPdfs.get(0);
-                return WebResponseUtils.bytesToWebResponse(
-                        pdf.content, pdf.filename, MediaType.APPLICATION_PDF);
+                ConvertedPdf pdf = convertedPdfs.getFirst();
+                TempFile tempOut = tempFileManager.createManagedTempFile(".pdf");
+                try {
+                    Files.write(tempOut.getPath(), pdf.content);
+                } catch (Exception e) {
+                    tempOut.close();
+                    throw e;
+                }
+                return WebResponseUtils.pdfFileToWebResponse(tempOut, pdf.filename);
             }
 
             String zipFilename =
                     filenames.isEmpty()
                             ? "converted_svgs.zip"
                             : GeneralUtils.generateFilename(
-                                    filenames.get(0), "_converted_svgs.zip");
-            byte[] zipBytes = createZipFromPdfs(convertedPdfs);
-
-            return WebResponseUtils.bytesToWebResponse(
-                    zipBytes, zipFilename, MediaType.APPLICATION_OCTET_STREAM);
+                                    filenames.getFirst(), "_converted_svgs.zip");
+            TempFile zipFile = createZipFromPdfs(convertedPdfs);
+            return WebResponseUtils.zipFileToWebResponse(zipFile, zipFilename);
         } catch (IOException e) {
             log.error("Failed to create response", e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Failed to create response".getBytes(StandardCharsets.UTF_8));
+            return errorResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to create response");
         }
     }
 
-    private byte[] createZipFromPdfs(List<ConvertedPdf> pdfs) throws IOException {
-        try (TempFile tempZipFile = new TempFile(tempFileManager, ".zip");
-                ZipOutputStream zipOut =
-                        new ZipOutputStream(Files.newOutputStream(tempZipFile.getPath()))) {
-
+    private TempFile createZipFromPdfs(List<ConvertedPdf> pdfs) throws IOException {
+        TempFile tempZipFile = tempFileManager.createManagedTempFile(".zip");
+        try (ZipOutputStream zipOut =
+                new ZipOutputStream(Files.newOutputStream(tempZipFile.getPath()))) {
             for (ConvertedPdf pdf : pdfs) {
                 ZipEntry pdfEntry = new ZipEntry(pdf.filename);
                 zipOut.putNextEntry(pdfEntry);
@@ -227,9 +251,11 @@ public class ConvertSvgToPDF {
                 zipOut.closeEntry();
                 log.debug("Added {} to ZIP", pdf.filename);
             }
-
-            return Files.readAllBytes(tempZipFile.getPath());
+        } catch (IOException e) {
+            tempZipFile.close();
+            throw e;
         }
+        return tempZipFile;
     }
 
     private static class ConvertedPdf {
